# -pomodoro-mcp-demo

./: .gitignore  README.md  pyproject.toml
backend/app/: main.py  schemas.py  store.py
backend/tests/: test_api.py
docs/: architecture-review.md  prd-pomodoro-app.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.test.jsx  styles.css
frontend/src/hooks/: usePomodoroController.js
frontend/src/lib/: api.js
issues/: 01-backend-settings-and-session-persistence.md  02-timer-ui-manual-flow.md  03-session-notes-and-history.md  04-tests-and-browser-verification.md  05-architecture-review-and-deepening.md
