[project]
name = "pomodoro-mcp-demo"
version = "0.1.0"
description = "Single-user pomodoro app for MCP and skills assignment"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.scripts]
app = "backend.app.main:app"

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
